# scale-agentex

./: .dummy-stupid-thing.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  WINDOWS.md  build.ps1  dev.sh  docker-compose.yaml  error_streaming.txt  openapi.yaml  pull_request_description.md  pyproject.toml  release-please-config.json  setup-build-codeartifact.sh  setup-codeartifact.sh  test_migration_file.txt  test_upload.txt
agentex/: .dockerignore  .gitignore  Dockerfile  Makefile  Makefile.dev  Makefile.minikube  Makefile.staging  README.md  build.ps1  docker-compose.host-access.yml  docker-compose.yml  logging_config.conf  openapi.yaml  pyproject.toml  pytest.ini
agentex-auth/: .justfile  Dockerfile  Makefile  README.md  pyproject.toml
agentex-auth/src/: main.py
agentex-auth/src/adapters/authentication/: adapter_sgp_auth.py  exceptions.py  port.py
agentex-auth/src/adapters/authorization/: __init__.py  adapter_sgp_authorization.py  exceptions.py  port.py
agentex-auth/src/api/routers/: authentication_router.py  authorization_router.py  healthcheck_router.py
agentex-auth/src/api/schemas/: authorization_schemas.py  principal_context.py
agentex-auth/src/config/: dependencies.py  environment_variables.py
agentex-auth/src/domain/: __init__.py  exceptions.py
agentex-auth/src/domain/models/: principal_contexts.py
agentex-auth/src/domain/services/: authentication_service.py  authorization_service.py
agentex-auth/src/utils/: cached_httpx_client.py  exception_utils.py  logging.py  make_authenticated_request.py
agentex/.venv_test/: pyvenv.cfg
agentex/.venv_test/Scripts/: activate  activate.bat
agentex/database/migrations/: alembic.ini  migration_history.txt
agentex/database/migrations/alembic/: env.py
agentex/docs/: mkdocs.yml  requirements.txt
agentex/docs/docs/: configuration.md  developing_agentex_agents.md  extra-loader.js  index.md  manifest_setup.md  optionalConfig.js  temporal-guide.md  tutorials.md
agentex/docs/docs/acp/: best-practices.md  overview.md  sync.md
agentex/docs/docs/agent_types/: agent_type_migration_guide.md  overview.md  sync.md
agentex/docs/docs/api/: adk.md  overview.md  types.md
agentex/docs/docs/concepts/: agent_task_tracker.md  agents.md  architecture.md  events.md  migration_guide.md  state.md  state_machines.md  streaming.md  task.md  task_message.md
agentex/docs/docs/deployment/: cicd.md  commands.md  overview.md
agentex/docs/docs/design_patterns/: human_in_the_loop.md  multi_activity_tools.md  overview.md
agentex/docs/docs/development_guides/: agent_task_tracker.md  architecture.md  auth_provider_contract.md  claude_code_agents.md  codex_agents.md  enterprise_edition.md  events_vs_messages.md  jupyter_notebooks.md  local_sandbox.md  message_handling.md  observability_and_tracing.md  race_conditions.md  state_machines.md  streaming.md  streaming_patterns.md  tutorials.md  webhooks.md
agentex/docs/docs/getting_started/: agentex_overview.md  choose_your_agent_type.md  project_structure.md
agentex/docs/docs/guides/: openai_temporal_integration.md
agentex/docs/docs/javascripts/: extra-loader.js
agentex/docs/docs/local_development/: notebooks.md
agentex/docs/docs/stylesheets/: extra.css
agentex/docs/docs/temporal_development/: core_concepts.md  human_in_the_loop.md  multi_activity_tools.md  openai_integration.md  overview.md  tool_patterns.md  troubleshooting.md  use_cases.md
agentex/docs/runbooks/: spans-task-id-backfill.md
agentex/otel/: otel-collector-config.datadog.yaml  otel-collector-config.yaml
agentex/scripts/: backfill_task_messages.py  backfill_task_states.py  generate_openapi_spec.py  generate_registry_creds.py  repro_task_name_dedup.py  run_tests.py  test_setup.py  verify_task_messages.py  verify_task_states.py
agentex/scripts/benchmarks/: __init__.py  benchmark_api.py  benchmark_task_state.py  compare_results.py  locustfile.py  metrics.py  scenarios.py
agentex/scripts/benchmarks/results/: .gitignore
agentex/scripts/ci_tools/: migration_lint.py
agentex/scripts/dev_local/: __init__.py  __main__.py  config.py  runner.py  services.py  supervise.py
agentex/scripts/dev_nodocker/: __init__.py  __main__.py  config.py  runner.py  services.py  supervise.py
agentex/scripts/git_hooks/: migration_safety_lint.sh
agentex/scripts/mongodb/: init-mongo.js
agentex/src/: _version.py
agentex/src/adapters/: orm.py
agentex/src/adapters/authentication/: port.py  (+1 more)
agentex/src/api/: RequestLoggingMiddleware.py  app.py  authentication_cache.py  authentication_middleware.py  cache.py  health_interceptor.py  logged_api_route.py  middleware_utils.py  version_header_middleware.py
agentex/src/config/: dependencies.py  environment_variables.py  mongodb_indexes.py  otel_instrumentation.py  storage_dependency.py
agentex/src/domain/: delegation_headers.py  exceptions.py
agentex/src/temporal/: run_healthcheck_workflow.py  run_retention_cleanup_schedule.py  run_worker.py  scheduled_agent_run_factory.py  task_retention_factory.py
agentex/src/utils/: acp_url.py  agent_api_key_authorization.py  agent_authorization.py  authorization_shortcuts.py  cache_metrics.py  cached_httpx_client.py  database.py  db_metrics.py  event_loop_metrics.py  feature_flags.py  http_request_handler.py  ids.py  json_schema.py  logging.py  model_utils.py  mongo_pool_metrics.py  otel_metrics.py  pagination.py  postgres_perf_logging.py  request_utils.py  schedule_authorization.py  schedule_metrics.py  stream_topics.py  task_authorization.py  task_constants.py  temporal_client.py  timestamp.py  url_validation.py  visibility_authorization.py
agentex/temporal/: config_template.yaml
agentex/temporal/dynamicconfig/: docker.yaml
agentex/tests/: conftest.py
agentex/tests/fixtures/: containers.py  database.py  database_simple.py  repositories.py  services.py
agentex/tests/integration/: test_redis_stream_maxlen.py  test_redis_stream_ttl.py  test_retention_cleanup_discovery.py  test_task_stream.py
agentex/tests/unit/: test_files_router.py
(+760 files in other folders)
