[project]
name = "agentex"
version = "0.1.0"
description = "agentex workspace"
authors = [{ name = "Anish Agrawal", email = "anish.agrawal@scale.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agentex-sdk==0.4.18",
    "temporalio>=1.18.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pre-commit>=3.0.0",
    "ruff>=0.3.4",
]
docs = [
    "agentex[docs]",
]

[tool.uv.workspace]
members = ["agentex-auth", "agentex"]

[tool.ruff]
target-version = "py311"
include = ["agentex/**/*py"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "agentex/database/migrations/",
]

[tool.ruff.lint]
ignore = [
    "E501", # Line too long (>79 characters)
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
