[project]
name = "agentex"
version = "0.1.0"
description = "agentex workspace"
authors = [{ name = "Felix Su", email = "felix.su@scale.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agentex-sdk>=0.9.4",
    "temporalio>=1.18.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pre-commit>=3.0.0",
    "ruff>=0.3.4",
]
docs = [
    "agentex[docs]",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

# Override agentex-sdk's fastapi<0.116 pin to allow starlette CVE-2025-62727 fix
# Override agentex-sdk's httpx<0.28 pin to allow litellm>=1.83.7 (GHSA-xqmj-j6mv-4862, requires httpx==0.28.1)
override-dependencies = [
    "fastapi>=0.135.0",
    "starlette>=0.52.0",
    "httpx[http2]>=0.28.1,<0.29",
]

[tool.uv.workspace]
members = ["agentex"]

[tool.ruff]
target-version = "py311"
include = ["agentex/**/*py"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "agentex/database/migrations/",
]

[tool.ruff.lint]
ignore = [
    "E501", # Line too long (>79 characters)
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
