[project]
name = "agentex"
version = "0.1.0"
description = "agentex workspace"
authors = [{ name = "Felix Su", email = "felix.su@scale.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "agentex-sdk>=0.9.4",
    "temporalio>=1.18.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.2",
    "pre-commit>=3.0.0",
    "ruff>=0.3.4",
]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
]

# Override agentex-sdk's fastapi<0.116 pin to allow the starlette 1.x line, which
# carries the fixes for CVE-2026-48818 / CVE-2026-54283 (and CVE-2025-62727).
# python-multipart>=0.0.32 clears CVE-2026-53539. Keep these floors at the patched
# minimums so a re-resolve can't regress below them.
# fastapi is capped <0.137.0: 0.137.0 made app.routes a tree of _IncludedRouter
# wrappers (no .path), which crashes the injected OTel FastAPI instrumentation on
# OPTIONS/CORS preflights (-> 500). 0.137.1/0.137.2/0.138.0 do not restore the flat
# list. The starlette>=1.3.1 floor below keeps the CVE fixes regardless of this cap.
override-dependencies = [
    "fastapi>=0.135.0,<0.137.0",
    "starlette>=1.3.1",
    "httpx[http2]>=0.28.1,<0.29",
    "langchain-core>=1.3.3",
    "mako>=1.3.12",
    "python-multipart>=0.0.32",
]

[tool.uv.workspace]
members = ["agentex"]

[tool.ruff]
target-version = "py311"
include = ["agentex/**/*py"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
    "agentex/database/migrations/",
]

[tool.ruff.lint]
ignore = [
    "E501", # Line too long (>79 characters)
]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
